--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "env-var": "^7.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2"
   }
 }
