--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.0",
+    "@types/nodemailer": "^6.4.14",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -26,6 +27,7 @@
     "env-var": "^7.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "nodemailer": "^6.9.13"
   }
 }
