--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,13 @@
 PORT=3000
+
 MONGO_URL=
 MONGO_DB_NAME=
+
 JWT_SEED=
+
+SEND_EMAIL=
 MAILER_SERVICE=
 MAILER_EMAIL=
 MAILER_SECRET_KEY=
+
 WEBSERVICE_URL=
